# PaperBanana-CN

./: .dockerignore  .gitignore  Dockerfile  README.md  cli.py  demo.py  index.html  main.py  package.json  pyproject.toml  requirements.txt
agents/: __init__.py  base_agent.py  critic_agent.py  planner_agent.py  polish_agent.py  retriever_agent.py  stylist_agent.py  vanilla_agent.py  visualizer_agent.py
configs/: model_config.template.yaml  provider_registry.yaml
docs/: agent-memory.md  optimization-backlog.md
prompts/: diagram_eval_prompts.py  plot_eval_prompts.py
providers/: evolink.py
scripts/: ci_unittest_runner.py  live_smoke_test.py
style_guides/: generate_category_style_guide.py
tests/: test_base_agent.py  test_cli_entrypoint.py  test_config_loader.py  test_dataset_paths.py  test_demo_model_inputs.py  test_demo_task_utils.py  test_demo_workbench_state.py  test_dependency_metadata.py  test_env_proxy_config.py  test_exp_config.py  test_generation_background.py  test_generation_utils_retry.py  test_log_config.py  test_main_provider_connections.py  test_paperviz_processor.py  test_pipeline_registry.py  test_pipeline_state.py  test_plot_input_utils.py  test_provider_connections.py  test_refine_background.py  test_result_bundle.py  test_result_order.py  test_retrieval_settings.py  test_retriever_agent.py  test_run_report.py  test_runtime_settings.py
utils/: __init__.py  config.py  config_loader.py  dataset_paths.py  demo_task_utils.py  eval_toolkits.py  generation_utils.py  image_utils.py  log_config.py  paperviz_processor.py  pipeline_registry.py  (+10 more)
(+4 files in other folders)
