[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paperbanana-cn"
version = "0.1.0"
description = "Bilingual academic figure workbench with GPT-5.5, GPT-Image-2, Gemini, and gateway-compatible routing. Extended from PaperBanana."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "Yuxuan Chen", email = "yxchen5522@mails.jlu.edu.cn" },
]
keywords = ["academic", "illustration", "multi-agent", "diagram", "plot", "scientific-visualization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "google-genai",
    "streamlit",
    "aiofiles",
    "pillow",
    "numpy",
    "tqdm",
    "json_repair",
    "anthropic",
    "openai",
    "matplotlib",
    "python-dotenv",
    "pyyaml",
    "google-auth",
    "aiohttp",
]

[project.scripts]
paperbanana-cn = "cli:main"
paperbanana = "cli:main"

[project.urls]
Homepage = "https://github.com/917940234/PaperBanana-CN"
Repository = "https://github.com/917940234/PaperBanana-CN"

[tool.hatch.build.targets.wheel]
only-include = [
    "agents",
    "prompts",
    "providers",
    "utils",
    "visualize",
    "style_guides",
    "cli.py",
    "demo.py",
    "main.py",
]
